# oxr-minimal

./: .gitignore  samples_uwp.sln
rustlib/: Cargo.toml  Xargo.toml  build.rs
rustlib/src/: lib.rs
samples/BasicXrApp/: App.cpp  App.h  BasicXrApp_uwp.vcxproj  BasicXrApp_uwp.vcxproj.filters  BasicXrApp_win32.vcxproj  CubeGraphics.cpp  DxUtility.cpp  DxUtility.h  OpenXrProgram.cpp  Package.appxmanifest  packages.config  pch.cpp  pch.h
