[package]
name = "rustlib"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
edition = "2018"
#build = "build.rs"

[lib]
name = "simpleservo"
crate-type = ["cdylib"]
test = false
bench = false

[dependencies]
webxr = { git = "https://github.com/servo/webxr", features = ["openxr-api"] }
webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
surfman = { version = "0.1", features = ["sm-no-wgl"] }
winapi = { version = "0.3", features = ["wingdi", "winuser", "winnt", "winbase", "processenv", "namedpipeapi", "ntdef", "minwindef", "handleapi", "debugapi"] }
libc = "*"
stderrlog = "*"

#[build-dependencies]
#gl_generator = "*"

[patch."https://github.com/servo/webxr"]
webxr = { path = "../../webxr/webxr" }
webxr-api = { path = "../../webxr/webxr-api" }

[patch.crates-io]
ipc-channel = { path = "../../ipc-channel" }
winapi = { git = "https://github.com/servo/winapi-rs", branch = "patch-1" }