[package]
name = "rustlib"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
edition = "2018"
#build = "build.rs"

[lib]
name = "simpleservo"
crate-type = ["cdylib"]
test = false
bench = false

[dependencies]
surfman = { version = "0.1", features = ["sm-no-wgl"] }
winapi = { version = "0.3", features = ["winbase", "debugapi", "namedpipeapi"] }
libc = "*"
stderrlog = "*"
openxr = "*"
euclid = "*"
wio = "*"

[patch.crates-io]
winapi = { git = "https://github.com/servo/winapi-rs", branch = "patch-1" }